# p3-poseidon2-cuda

./: Cargo.toml  README.md  build.rs
benches/: breakdown.rs  fib_prove.rs  gpu_merkle.rs  perm_throughput.rs  plonky3_merkle.rs  session.rs
src/: glue.cu  gpu_merkle.rs  gpu_mmcs.rs  lib.rs
