[package]
name = "p3-poseidon2-cuda"
version = "0.1.0"
edition = "2021"

[dependencies]
p3-baby-bear = { git = "https://github.com/Plonky3/Plonky3.git", rev = "b638013721b7c9c07b171cb79a47366c928fb550" }
p3-field    = { git = "https://github.com/Plonky3/Plonky3.git", rev = "b638013721b7c9c07b171cb79a47366c928fb550" }
p3-symmetric = { git = "https://github.com/Plonky3/Plonky3.git", rev = "b638013721b7c9c07b171cb79a47366c928fb550" }

[dev-dependencies]
rand = "0.8"

[build-dependencies]
cc = { version = "1", features = ["parallel"] }

[lib]
name = "p3_poseidon2_cuda"
path = "src/lib.rs"

[[bench]]
name = "perm_throughput"
harness = false
path = "benches/perm_throughput.rs"

[[bench]]
name = "breakdown"
harness = false
path = "benches/breakdown.rs"

[[bench]]
name = "session"
harness = false
path = "benches/session.rs"

[[bench]]
name = "plonky3_merkle"
harness = false
path = "benches/plonky3_merkle.rs"
